speed, human readable file sizes, bugs

--- a/style.css
+++ b/style.css
@@ -42,6 +42,10 @@
     margin-top: auto;
 }
 
+#speed {
+    display: none;
+}
+
 #buttonsBox {
     display: flex;
     justify-content: space-around;
